examples/errors/index_out_of_range.eigs
# ERROR DEMO — indexing past the end of a list.
# Indexing is strictly bounds-checked (negative indices count from the
# end, but only within -len..len-1).
# expect-error: Error line 6: index 10 out of range (list length 3)
items is [1, 2, 3]
v is items[10]
